vlib/v/checker/tests/infix_is_unknown_module_no_panic.vv
fn sample() !int {
	return error('x')
}

fn main() {
	_ := sample() or {
		if err is io.Eof {
			return
		}
		return
	}
}
